--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,7 @@
 /.idea/workspace.xml
 /.idea/tasks.xml
 /.idea/vcs.xml
+/.idea/junitgenerator-prj-settings.xml
 /out
+.idea/junitgenerator-prj-settings.xml
+.idea/libraries/Arquillian_JUnit_Release.xml
